# beatmap-downloader

./: .gitignore  .taplo.toml  Cargo.toml  readme.md
locales/: app.toml
src/: app.rs  event.rs  info.rs  main.rs  tui.rs  ui.rs  update.rs  util.rs
src/components/: mod.rs  multi_select_list.rs  select_list.rs
src/core/: api.rs
src/utils/: loop_vec.rs  mod.rs
test/: post.py  post_server.py  readme.md
