[package]
name = "beatmap-downloader"
version = "0.1.0"
edition = "2021"
authors = ["lxl66566 <lxl66566@gmail.com>"]
description = "TUI tool of OSU beatmap downloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
ratatui = "0.25.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
