[package]
name = "beatmap-downloader"
version = "0.1.0"
edition = "2021"
authors = ["lxl66566 <lxl66566@gmail.com>"]
description = "TUI tool of OSU beatmap downloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.4.16"
crossterm = { version = "0.27.0" }
current_locale = "0.1.1"
ratatui = "0.25.0"
reqwest = { version = "0.11.23", features = ["json"] }
rust-i18n = "2.3.0"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tui-textarea = "0.4.0"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
