[package]
name = "beatmap-downloader"
version = "0.1.0"
edition = "2021"
authors = ["lxl66566 <lxl66566@gmail.com>"]
description = "TUI tool of OSU beatmap downloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.4.16"
crossterm = { version = "0.27.0", features = ["event-stream"] }
current_locale = "0.1.1"
futures = "0.3.30"
ratatui = { version = "0.25.0", features = ["widget-calendar"] }
reqwest = { version = "0.11.23", features = ["json"] }
rust-i18n = "2.3.0"
serde_json = "1.0.111"
time = { version = "0.3.11", features = ["std"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
tui-textarea = "0.4.0"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
